generation of API design fully functional again, routing adjusted to get with params
