# github-crawler-api/app/controllers.go
@@ -36,15 +36,13 @@ func initService(service *goa.Service) {
 type CommitsController interface {
 	goa.Muxer
 	List(*ListCommitsContext) error
-	Show(*ShowCommitsContext) error
 }
 
 // MountCommitsController "mounts" a Commits resource controller on the given service.
 func MountCommitsController(service *goa.Service, ctrl CommitsController) {
 	initService(service)
 	var h goa.Handler
-	service.Mux.Handle("OPTIONS", "/v1/commits/list", ctrl.MuxHandler("preflight", handleCommitsOrigin(cors.HandlePreflight()), nil))
-	service.Mux.Handle("OPTIONS", "/v1/commits/:commitID", ctrl.MuxHandler("preflight", handleCommitsOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/v1/repositories/:repoID/commits/list", ctrl.MuxHandler("preflight", handleCommitsOrigin(cors.HandlePreflight()), nil))
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -56,33 +54,11 @@ func MountCommitsController(service *goa.Service, ctrl CommitsController) {
 		if err != nil {
 			return err
 		}
-		// Build the payload
-		if rawPayload := goa.ContextRequest(ctx).Payload; rawPayload != nil {
-			rctx.Payload = rawPayload.(*ListPayload)
-		} else {
-			return goa.MissingPayloadError()
-		}
 		return ctrl.List(rctx)
 	}
 	h = handleCommitsOrigin(h)
-	service.Mux.Handle("POST", "/v1/commits/list", ctrl.MuxHandler("list", h, unmarshalListCommitsPayload))
-	service.LogInfo("mount", "ctrl", "Commits", "action", "List", "route", "POST /v1/commits/list")
-
-	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
-		// Check if there was an error loading the request
-		if err := goa.ContextError(ctx); err != nil {
-			return err
-		}
-		// Build the context
-		rctx, err := NewShowCommitsContext(ctx, req, service)
-		if err != nil {
-			return err
-		}
-		return ctrl.Show(rctx)
-	}
-	h = handleCommitsOrigin(h)
-	service.Mux.Handle("GET", "/v1/commits/:commitID", ctrl.MuxHandler("show", h, nil))
-	service.LogInfo("mount", "ctrl", "Commits", "action", "Show", "route", "GET /v1/commits/:commitID")
+	service.Mux.Handle("GET", "/v1/repositories/:repoID/commits/list", ctrl.MuxHandler("list", h, nil))
+	service.LogInfo("mount", "ctrl", "Commits", "action", "List", "route", "GET /v1/repositories/:repoID/commits/list")
 }
 
 // handleCommitsOrigin applies the CORS response headers corresponding to the origin.
@@ -111,8 +87,87 @@ func handleCommitsOrigin(h goa.Handler) goa.Handler {
 	}
 }
 
-// unmarshalListCommitsPayload unmarshals the request body into the context request data Payload field.
-func unmarshalListCommitsPayload(ctx context.Context, service *goa.Service, req *http.Request) error {
+// RepositoriesController is the controller interface for the Repositories actions.
+type RepositoriesController interface {
+	goa.Muxer
+	List(*ListRepositoriesContext) error
+	Show(*ShowRepositoriesContext) error
+}
+
+// MountRepositoriesController "mounts" a Repositories resource controller on the given service.
+func MountRepositoriesController(service *goa.Service, ctrl RepositoriesController) {
+	initService(service)
+	var h goa.Handler
+	service.Mux.Handle("OPTIONS", "/v1/repositories/list", ctrl.MuxHandler("preflight", handleRepositoriesOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/v1/repositories/:repoID", ctrl.MuxHandler("preflight", handleRepositoriesOrigin(cors.HandlePreflight()), nil))
+
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		// Check if there was an error loading the request
+		if err := goa.ContextError(ctx); err != nil {
+			return err
+		}
+		// Build the context
+		rctx, err := NewListRepositoriesContext(ctx, req, service)
+		if err != nil {
+			return err
+		}
+		// Build the payload
+		if rawPayload := goa.ContextRequest(ctx).Payload; rawPayload != nil {
+			rctx.Payload = rawPayload.(*ListPayload)
+		} else {
+			return goa.MissingPayloadError()
+		}
+		return ctrl.List(rctx)
+	}
+	h = handleRepositoriesOrigin(h)
+	service.Mux.Handle("GET", "/v1/repositories/list", ctrl.MuxHandler("list", h, unmarshalListRepositoriesPayload))
+	service.LogInfo("mount", "ctrl", "Repositories", "action", "List", "route", "GET /v1/repositories/list")
+
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		// Check if there was an error loading the request
+		if err := goa.ContextError(ctx); err != nil {
+			return err
+		}
+		// Build the context
+		rctx, err := NewShowRepositoriesContext(ctx, req, service)
+		if err != nil {
+			return err
+		}
+		return ctrl.Show(rctx)
+	}
+	h = handleRepositoriesOrigin(h)
+	service.Mux.Handle("GET", "/v1/repositories/:repoID", ctrl.MuxHandler("show", h, nil))
+	service.LogInfo("mount", "ctrl", "Repositories", "action", "Show", "route", "GET /v1/repositories/:repoID")
+}
+
+// handleRepositoriesOrigin applies the CORS response headers corresponding to the origin.
+func handleRepositoriesOrigin(h goa.Handler) goa.Handler {
+
+	return func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		origin := req.Header.Get("Origin")
+		if origin == "" {
+			// Not a CORS request
+			return h(ctx, rw, req)
+		}
+		if cors.MatchOrigin(origin, "*") {
+			ctx = goa.WithLogContext(ctx, "origin", origin)
+			rw.Header().Set("Access-Control-Allow-Origin", origin)
+			rw.Header().Set("Access-Control-Max-Age", "600")
+			rw.Header().Set("Access-Control-Allow-Credentials", "true")
+			if acrm := req.Header.Get("Access-Control-Request-Method"); acrm != "" {
+				// We are handling a preflight request
+				rw.Header().Set("Access-Control-Allow-Methods", "GET, POST, PUT, PATCH, DELETE, OPTIONS")
+				rw.Header().Set("Access-Control-Allow-Headers", "Authorization, X-Auth, X-Pin, X-Platform, content-type")
+			}
+			return h(ctx, rw, req)
+		}
+
+		return h(ctx, rw, req)
+	}
+}
+
+// unmarshalListRepositoriesPayload unmarshals the request body into the context request data Payload field.
+func unmarshalListRepositoriesPayload(ctx context.Context, service *goa.Service, req *http.Request) error {
 	payload := &listPayload{}
 	if err := service.DecodeRequest(req, payload); err != nil {
 		return err
