# github-crawler-api/app/media_types.go
@@ -11,9 +11,8 @@
 package app
 
 import (
-	"time"
-
 	"github.com/goadesign/goa"
+	"time"
 )
 
 // Commit data (default view)
@@ -21,7 +20,7 @@ import (
 // Identifier: application/vnd.commit+json; view=default
 type Commit struct {
 	// Owner of the commit
-	Author *Ghuser `form:"author" json:"author" xml:"author"`
+	Author *Ghuser `json:"author"`
 	// ID of the commit in the database
 	ID int `form:"id" json:"id" xml:"id"`
 	// Message of the commit
@@ -39,7 +38,7 @@ func (mt *Commit) Validate() (err error) {
 		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "sha"))
 	}
 	if mt.Author == nil {
-		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "author"))
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "authorOfCommit"))
 	}
 
 	if mt.Author != nil {
@@ -74,7 +73,7 @@ type Ghuser struct {
 	// ID of the user in the database
 	ID int `form:"id" json:"id" xml:"id"`
 	// Location of the user
-	Location *Location `form:"location,omitempty" json:"location,omitempty" xml:"location,omitempty"`
+	Location *Location `json:"location"`
 	// Unique username of the user
 	Login string `form:"login" json:"login" xml:"login"`
 	// Type of the user
@@ -89,11 +88,6 @@ func (mt *Ghuser) Validate() (err error) {
 	}
 	if mt.Type == "" {
 		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "type"))
-	}
-	if mt.Location != nil {
-		if err2 := mt.Location.Validate(); err2 != nil {
-			err = goa.MergeErrors(err, err2)
-		}
 	}
 	return
 }
@@ -113,11 +107,34 @@ type Location struct {
 // Validate validates the Location media type instance.
 func (mt *Location) Validate() (err error) {
 
-	// if mt.Lat == "" {
-	// 	err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "lat"))
-	// }
-	// if mt.Lng == "" {
-	// 	err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "lng"))
-	// }
+	return
+}
+
+// Commit data (default view)
+//
+// Identifier: application/vnd.repository+json; view=default
+type Repository struct {
+	// Full name of the repo
+	FullName string `form:"full_name" json:"full_name" xml:"full_name"`
+	// ID of the commit in the database
+	ID int `form:"id" json:"id" xml:"id"`
+	// If owner is an organization
+	Org *bool `form:"org,omitempty" json:"org,omitempty" xml:"org,omitempty"`
+	// Name of the owner of the repository
+	Owner string `form:"owner" json:"owner" xml:"owner"`
+	// Time the commit happened
+	ProjectID float64 `form:"project_id" json:"project_id" xml:"project_id"`
+}
+
+// Validate validates the Repository media type instance.
+func (mt *Repository) Validate() (err error) {
+
+	if mt.Owner == "" {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "owner"))
+	}
+	if mt.FullName == "" {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`response`, "full_name"))
+	}
+
 	return
 }
